# custom-tracing-logger

./: .gitignore  BLOG.md  CHANGELOG.md  CICD_BLOG.md  Cargo.toml  DEEP_DIVE.md  PUBLISHING.md  README.md
.github/workflows/: ci.yml  release.yml  security.yml  test-release.yml
examples/: basic.rs  comparison.rs  configuration.rs  file_logging.rs  file_only.rs  filtering.rs  instrument_demo.rs  instrument_example.rs  macros.rs  performance_monitoring.rs  selective.rs  simple_usage.rs  test_macros.rs  web_server.rs  with_dotenv.rs
scripts/: test-ci.ps1  test-release.ps1
src/: lib.rs
